--- a/Titanic/readme
+++ b/Titanic/readme
@@ -3,3 +3,4 @@ Titanic-using svm-(0.76-kaggle)
 Titanic1-using deep learning(keras)
 titanic2-using voting ensembling(0.77-kaggle)
 titanic3-Using stacking(0.794-kaggle)
+titanic4-stacking(0.806-kaggle)
